# walksnail-goggles-web

./: .gitignore  FEATURE_MAP.md  LICENSE  PROTOCOL_SPEC.md  README.md
docs/screenshots/: README.md
poc/python/: GUIA_USUARIO.md  README.md  WEB_README.md  app_launcher.py  build.py  pyproject.toml  walksnail.spec
poc/python/examples/: connect.py  live_view.py
poc/python/tests/: test_protocol.py  test_web.py
poc/python/walksnail_client/: __init__.py  cli.py  client.py  protocol.py  video.py
poc/python/walksnail_client/web/: __init__.py  server.py
poc/python/walksnail_client/web/static/: index.html
